Bug 476670 - Dolphin doesn't focus on the new pasted file if it's beyond screen border
Summary: Dolphin doesn't focus on the new pasted file if it's beyond screen border
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.2
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-07 12:25 UTC by mozo
Modified: 2024-06-17 12:40 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mozo 2023-11-07 12:25:58 UTC
SUMMARY
Dolphin doesn't focus on the new pasted file if it's beyond screen border. Let's say we have a folder with 1000 files. We vave to paste a new file with a name of WWW. When we open the folder and it's set to arrange items by name, we see the first 20-30 files beginning with the letters A and B. We don't see the files with W. When we paste the file, Dolphin doesn't focus on the newly pasted file and doesn't mark it as it should be and was like that for ages not only in Dolphin but in every single file manager. It's a new bug and it appears version ot two from 23.08.2. I can't downgrade to try when exactly the problem appeared because of this:
https://pastebin.com/8uRcrh7t

It's very tiring to search files among thousands of others files many times again. Note that I did not touch anything during paste process and I don't select other files. It's a recent problem.

STEPS TO REPRODUCE
1. Copy a file and paste it in a directory with many files where the name of the copied and pasted file is beyond the letters which you're seeing in the moment.
2. 
3. 

OBSERVED RESULT
When the file transfer is over, it's like nothing happened.

EXPECTED RESULT
Dolphin should move to the newly pasted file and should mark it.

SOFTWARE/OS VERSIONS
Arch Linux/KDE Plasma:  5.27.9
KDE Frameworks Version: 5.111.0
Qt Version: 5.15.11
Comment 1 mozo 2023-11-25 12:46:48 UTC
I see that in the moment almost all of the forces are working on Plasma 6 and I'm ok with that if this bug will not be presented in Plasma 6 but I doubt it. It's an important bug and it needs attention. It's a pain to work with directories with many files and to find every new pasted file manually. We're the only one file manager with such ridiculous bug in the moment. It's so intrusive that I installed nemo temporarily but I'm using KDE and I want Dolphin. Please look at this bug.
Comment 2 mozo 2023-12-06 23:17:58 UTC
23.08.3 - the bug is still here.
Comment 3 mozo 2023-12-10 00:19:32 UTC
23.08.4 - there's no difference in this behaviour. 
Please ask if something is not clear. English isn't my native language so I might not described the problem correctly. I can record a video if there's a need for that.
Comment 4 Felix Ernst 2023-12-12 00:53:40 UTC
Everything is clear. Thank you for the report! We are just not that fast to look into it.
Comment 5 mozo 2023-12-12 09:23:18 UTC
Thanks!
Comment 6 Felix Ernst 2023-12-12 18:05:00 UTC
Can confirm. From my testing the issue might be that `DolphinView::slotItemCreatedFromJob` never gets called for some reason.

I reverted https://invent.kde.org/system/dolphin/-/commit/040e2afcfafaa8edd365d959760d4d0e7f3e48d3 locally and this fixed the bug being reported here for me. Not sure what exactly is going wrong though.
Comment 7 mozo 2023-12-12 18:59:53 UTC
Thanks for confirming!
Comment 8 Bug Janitor Service 2023-12-16 12:26:08 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/678
Comment 9 Méven Car 2023-12-18 10:14:26 UTC
Git commit 3430ad167355436c81fd1248d106e3f6f61d1594 by Méven Car, on behalf of Méven Car.
Committed on 18/12/2023 at 11:10.
Pushed by meven into branch 'master'.

DolphinView: Ensure to update the whole viewState after a job created files

M  +5    -3    src/views/dolphinview.cpp
M  +1    -1    src/views/dolphinview.h

https://invent.kde.org/system/dolphin/-/commit/3430ad167355436c81fd1248d106e3f6f61d1594
Comment 10 mozo 2023-12-18 10:27:45 UTC
Thank you Méven Car!!!
When we can expect the fix to lend in the main version?
Comment 11 Méven Car 2023-12-18 11:45:48 UTC
(In reply to mozo from comment #10)
> Thank you Méven Car!!!
> When we can expect the fix to lend in the main version?

I can't cherry-pick this cleanly to kf5 branch so it will be 24.02 "mega release" unfortunately.
Comment 12 mozo 2023-12-18 12:23:42 UTC
I see, thank you very much once again!
Comment 13 mozo 2024-04-28 17:08:46 UTC
Unfortunately this bug isn't solved in Dolphin 24.02.2.
Comment 14 mozo 2024-04-28 17:15:27 UTC
Just tested it both on X11 and Wayland and there's no difference. The bug is there.
My new system info:
Operating System: Arch Linux 
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.7-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 32 × Intel® Core™ i9-14900KF
Memory: 62.6 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 4090/PCIe/SSE2
Manufacturer: ASUS
Comment 15 Petar Nedyalkov 2024-04-29 12:08:49 UTC
The same issue occurs in my configuration:

Operating System: Arch Linux 
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.7-arch1-2 (64-bit)
Graphics Platform: X11
Dolphin version: 24.02.2
Comment 16 Bug Janitor Service 2024-04-30 15:56:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/769
Comment 17 Méven Car 2024-05-04 08:03:40 UTC
Git commit 67de3b7344fd8a9af89017405b1edda6e1cda9ff by Méven Car, on behalf of Anthony Fieroni.
Committed on 04/05/2024 at 07:58.
Pushed by meven into branch 'master'.

DolphinView: Update selection on newly created item(s)
Adjust paste to url to new KF6 signals

Signed-off-by: Anthony Fieroni <bvbfan@abv.bg>

M  +14   -1    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/67de3b7344fd8a9af89017405b1edda6e1cda9ff
Comment 18 mozo 2024-06-16 11:23:27 UTC
Could someone tell me when the fix is supposed to lend for us? There were 2 versions after the fix and it isn't here yet.
Comment 19 Felix Ernst 2024-06-17 12:27:41 UTC
(In reply to mozo from comment #18)
> Could someone tell me when the fix is supposed to lend for us? There were 2
> versions after the fix and it isn't here yet.

Seems to me like the commit by Anthony Fieroni above didn't make it into the Dolphin 24.05 release. So as it stands it will only be available from the August release 24.08 onward.
Comment 20 mozo 2024-06-17 12:40:52 UTC
(In reply to Felix Ernst from comment #19)
> (In reply to mozo from comment #18)
> > Could someone tell me when the fix is supposed to lend for us? There were 2
> > versions after the fix and it isn't here yet.
> 
> Seems to me like the commit by Anthony Fieroni above didn't make it into the
> Dolphin 24.05 release. So as it stands it will only be available from the
> August release 24.08 onward.

Sad...
Thank you for the info!