DolphinView: Ensure to update the whole viewState after a job created files

BUG: 476670